implement openapi api definitions
