# express-api/api-spec/halp_api_openapi_3.1.yaml
@@ -23,19 +23,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            type: object
-                            properties:
-                                displayName:
-                                    type: string
-                                email:
-                                    type: string
-                                password:
-                                    type: string
-                                    format: password
-                            required:
-                                - displayName
-                                - email
-                                - password
+                            $ref: "#/components/schemas/UserCreateRequestSchema"
             responses:
                 "201":
                     $ref: "#/components/responses/DefaultSuccessResponse"
@@ -51,19 +39,14 @@ paths:
                 content:
                     application/json:
                         schema:
-                            type: object
-                            properties:
-                                email:
-                                    type: string
-                                password:
-                                    type: string
-                                    format: password
-                            required:
-                                - email
-                                - password
+                            $ref: "#/components/schemas/LoginRequestSchema"
             responses:
                 "200":
-                    $ref: "#/components/responses/DefaultSuccessResponse"
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/AccessTokenResponseSchema"
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
 
@@ -75,12 +58,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            type: object
-                            properties:
-                                email:
-                                    type: string
-                            required:
-                                - email
+                            $ref: "#/components/schemas/LogoutRequestSchema"
             responses:
                 "200":
                     $ref: "#/components/responses/DefaultSuccessResponse"
@@ -94,7 +72,8 @@ paths:
               required: true
               schema:
                   type: string
-        post:
+        get:
+            # TODO also represent the cookie returned
             summary: refreshes access-token with provided refresh-token
             operationId: refreshTokenId
             responses:
@@ -103,13 +82,11 @@ paths:
                     content:
                         application/json:
                             schema:
-                                type: object
-                                properties:
-                                    accessToken:
-                                        type: string
+                                $ref: "#/components/schemas/AccessTokenResponseSchema"
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
-    # add /reset-password:
+
+    # TODO add /reset-password:
 
     /auth/change-password:
         parameters:
@@ -119,6 +96,11 @@ paths:
             operationId: updatePasswordId
             tags:
                 - auth
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/PasswordChangeRequestSchema"
             responses:
                 "200":
                     $ref: "#/components/responses/DefaultSuccessResponse"
@@ -156,12 +138,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            type: object
-                            properties:
-                                teamName:
-                                    type: string
-                            required:
-                                - teamName
+                            $ref: "#/components/schemas/TeamCreateRequestSchema"
             responses:
                 "201":
                     $ref: "#/components/responses/DefaultSuccessResponse"
@@ -179,7 +156,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: "#/components/schemas/TeamEnrichedSchema"
+                                contains:
+                                    type: object
+                                    properties:
+                                        teams:
+                                            type: array
+                                            items:
+                                                $ref: "#/components/schemas/TeamEnrichedSchema"
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
 
@@ -241,23 +224,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            type: object
-                            properties:
-                                name:
-                                    type: string
-                                description:
-                                    type: string
-                                dateTime:
-                                    type: number
-                                jobs:
-                                    type: array
-                                    minItems: 1
-                                    items:
-                                        $ref: "#/components/schemas/JobCreatorSchema"
-                            required:
-                                - name
-                                - dateTime
-                                - jobs
+                            $ref: "#/components/schemas/EventCreateRequestSchema"
             responses:
                 "201":
                     $ref: "#/components/responses/DefaultSuccessResponse"
@@ -313,12 +280,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            type: object
-                            properties:
-                                jobType:
-                                    type: string
-                            required:
-                                - jobType
+                            $ref: "#/components/schemas/JobCreateRequestSchema"
             responses:
                 "201":
                     $ref: "#/components/responses/DefaultSuccessResponse"
@@ -355,10 +317,12 @@ paths:
                 content:
                     application/json:
                         schema:
-                            type: object
-                            properties:
-                                volunteerId:
-                                    type: string
+                            $ref: "#/components/schemas/JobReassignRequestSchema"
+            responses:
+                "200":
+                    $ref: "#/components/responses/DefaultSuccessResponse"
+                "default":
+                    $ref: "#/components/responses/DefaultErrorResponse"
 
     /auth/events:
         parameters:
@@ -382,8 +346,6 @@ paths:
                                             type: array
                                             items:
                                                 $ref: "#/components/schemas/EventEnrichedSchema"
-                                    required:
-                                        - events
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
 
@@ -417,28 +379,12 @@ paths:
             tags:
                 - auth
                 - event
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                volunteerId:
-                                    type: string
-                            required:
-                                - volunteerId
             responses:
                 "201":
                     $ref: "#/components/responses/DefaultSuccessResponse"
                     # TODO replace with actual object
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
-
-    /auth/events/{eventId}/volunteers/{volunteerId}:
-        parameters:
-            - $ref: "#/components/parameters/AccessTokenParameter"
-            - $ref: "#/components/parameters/EventIdParameter"
-            - $ref: "#/components/parameters/VolunteerIdParameter"
         delete:
             summary: unvolunteer from event
             operationId: unvolunteerFromEventId
@@ -484,6 +430,7 @@ components:
             required: true
             schema:
                 type: string
+
     responses:
         DefaultSuccessResponse:
             description: OK
@@ -497,17 +444,113 @@ components:
                 application/json:
                     schema:
                         $ref: "#/components/schemas/DefaultErrorResponseSchema"
+
     schemas:
+        # request body schemas
+        UserCreateRequestSchema:
+            type: object
+            properties:
+                displayName:
+                    type: string
+                email:
+                    type: string
+                password:
+                    type: string
+                    format: password
+            required:
+                - displayName
+                - email
+                - password
+        LoginRequestSchema:
+            type: object
+            properties:
+                email:
+                    type: string
+                password:
+                    type: string
+                    format: password
+            required:
+                - email
+                - password
+        LogoutRequestSchema:
+            type: object
+            properties:
+                email:
+                    type: string
+            required:
+                - email
+        PasswordChangeRequestSchema:
+            type: object
+            properties:
+                oldPassword:
+                    type: string
+                    format: password
+                newPassword:
+                    type: string
+                    format: password
+            required:
+                - oldPassword
+                - newPassword
+        TeamCreateRequestSchema:
+            type: object
+            properties:
+                teamName:
+                    type: string
+            required:
+                - teamName
+        EventCreateRequestSchema:
+            type: object
+            properties:
+                name:
+                    type: string
+                description:
+                    type: string
+                dateTime:
+                    type: number
+                jobs:
+                    type: array
+                    minItems: 1
+                    items:
+                        $ref: "#/components/schemas/JobCreatorSchema"
+            required:
+                - name
+                - dateTime
+                - jobs
+        JobCreateRequestSchema:
+            type: object
+            properties:
+                jobType:
+                    type: string
+            required:
+                - jobType
+        JobReassignRequestSchema:
+            type: object
+            properties:
+                volunteerId:
+                    type: string
+
+        # response body schemas
         DefaultSuccessResponseSchema:
             type: object
             properties:
                 message:
                     type: string
+            required:
+                - message
         DefaultErrorResponseSchema:
             type: object
             properties:
                 errorMessage:
                     type: string
+            required:
+                - errorMessage
+        AccessTokenResponseSchema:
+            type: object
+            properties:
+                accessToken:
+                    type: string
+            required:
+                - accessToken
         UserSchema:
             type: object
             properties:
@@ -517,15 +560,10 @@ components:
                     type: string
                 email:
                     type: string
-        TeamSchema:
-            type: object
-            properties:
-                id:
-                    type: string
-                adminId:
-                    type: string
-                name:
-                    type: string
+            required:
+                - id
+                - displayName
+                - email
         TeamEnrichedSchema:
             type: object
             properties:
@@ -539,6 +577,46 @@ components:
                     type: boolean
                 isAdmin:
                     type: boolean
+            required:
+                - id
+                - adminId
+                - name
+                - isSubscribed
+                - isAdmin
+        EventManagedSchema:
+            type: object
+            properties:
+                event:
+                    $ref: "#/components/schemas/EventSchema"
+                volunteers:
+                    type: array
+                    items:
+                        $ref: "#/components/schemas/VolunteeringEnrichedSchema"
+                jobs:
+                    type: array
+                    minItems: 1
+                    items:
+                        $ref: "#/components/schemas/JobEnrichedSchema"
+        EventsResponseSchema:
+            type: object
+            properties:
+                events:
+                    type: array
+                    items:
+                        $ref: "#/components/schemas/EventEnrichedSchema"
+            required:
+                - events
+
+        # default
+        TeamSchema:
+            type: object
+            properties:
+                id:
+                    type: string
+                adminId:
+                    type: string
+                name:
+                    type: string
         EventSchema:
             type: object
             properties:
@@ -571,8 +649,17 @@ components:
                     type: boolean
                 isVolunteering:
                     type: boolean
-                isAdmin:
+                isAssigned:
                     type: boolean
+            required:
+                - id
+                - teamId
+                - name
+                - description
+                - startDatetime
+                - complete
+                - isVolunteering
+                - isAdmin
         EventDetailedSchema:
             type: object
             properties:
@@ -619,17 +706,3 @@ components:
                 - id
                 - eventId
                 - type
-        EventManagedSchema:
-            type: object
-            properties:
-                event:
-                    $ref: "#/components/schemas/EventSchema"
-                volunteers:
-                    type: array
-                    items:
-                        $ref: "#/components/schemas/VolunteeringEnrichedSchema"
-                jobs:
-                    type: array
-                    minItems: 1
-                    items:
-                        $ref: "#/components/schemas/JobEnrichedSchema"
