# express-api/src/main/api/routes/api-utils.ts
@@ -1,0 +1,13 @@
+export function successJson(message: string) {
+    return {
+        message: message
+    }
+}
+
+export function errorJson(message: string) {
+    return {
+        errorMessage: message
+    }
+}
+
+export type RequestUserEnriched = { userId: string };
