# express-api/src/main/api/routes/events.ts
@@ -1,12 +1,21 @@
 import express from 'express';
 import { SqliteError } from 'better-sqlite3';
 
-import { repository } from '../repositories/repository.js';
-import { errorJson, successJson } from './api-utils.js';
+import { repository } from '../../repositories/repository-factory.js';
+import { errorJson, successJson, type RequestUserEnriched } from './api-utils.js';
+import type { components } from '../../../../api-spec/generated/schema.js';
+import { JobTypes } from '../../resources/constants.js';
 
 const router = express.Router();
 
-router.get('/', async (req, res) => {
+router.get<
+    '/',
+    any,
+    components['schemas']['EventEnrichedSchema'][] | components['schemas']['DefaultErrorResponseSchema'],
+    RequestUserEnriched,
+    any,
+    any
+>('/', async (req, res) => {
     // TODO: extend to possibly see events I am volunteering for but not subscribed to team
     // get events of teams I am subscribed to
     switch (req.query.as) {
@@ -17,12 +26,18 @@ router.get('/', async (req, res) => {
             console.warn('using deprecated query')
         default:
             const events = await repository.getEnrichedEventsByVolunteerId(req.body.userId);
-            res.status(200).json(events);
-            break;
+            return res.status(200).json(events);
     }
 });
 
-router.get('/:eventId', async (req, res) => {
+router.get<
+    '/:eventId',
+    any,
+    components['schemas']['EventDetailedSchema'] | components['schemas']['DefaultErrorResponseSchema'],
+    RequestUserEnriched,
+    any,
+    any
+>('/:eventId', async (req, res) => {
     try {
         const enrichedEvent = await repository.getEnrichedEvent(req.params.eventId, req.body.userId);
         if (!enrichedEvent)
@@ -31,32 +46,35 @@ router.get('/:eventId', async (req, res) => {
         if (!team)
             throw new Error('unable to find team');
         const admin = await repository.getUserById(team.adminId);
+        if (typeof admin === 'undefined')
+            throw new Error('unable to find admin');
         const jobs = await repository.getEnrichedJobsByEventId(req.params.eventId);
         const isAssigned = enrichedEvent.isAssigned;
         const result = {
             admin: {
-                id: admin?.id,
-                displayName: admin?.displayName,
-                email: admin?.email
+                id: admin.id,
+                displayName: admin.displayName,
+                email: admin.email
             },
             team: {
-                id: team?.id,
-                name: team?.name,
-                adminId: team?.adminId
+                id: team.id,
+                name: team.name,
+                adminId: team.adminId
             },
             event: {
-                id: enrichedEvent?.id,
-                teamId: enrichedEvent?.teamId,
-                name: enrichedEvent?.name,
-                description: enrichedEvent?.description,
-                startDatetime: enrichedEvent?.startDatetime,
-                complete: enrichedEvent?.complete,
-                isVolunteering: enrichedEvent?.isVolunteering,
+                id: enrichedEvent.id,
+                teamId: enrichedEvent.teamId,
+                name: enrichedEvent.name,
+                description: enrichedEvent.description,
+                startDatetime: enrichedEvent.startDatetime,
+                complete: enrichedEvent.complete,
+                isVolunteering: enrichedEvent.isVolunteering,
                 isAssigned: isAssigned
             },
             jobs: jobs.map(j => ({
                 id: j.id,
-                type: j.type,
+                eventId: j.eventId,
+                type: JobTypes[j.type],
                 assignee_id: j.assigneeId,
                 assignee_name: j.assigneeId && isAssigned ? j.assigneeName : '' // only show names if i am assigned as well
             }))
@@ -68,19 +86,26 @@ router.get('/:eventId', async (req, res) => {
 });
 
 // volunteer for event
-router.post('/:eventId/volunteers', async (req, res) => {
+router.post<
+    '/:eventId/volunteers',
+    any,
+    components['schemas']['DefaultSuccessResponseSchema'] | components['schemas']['DefaultErrorResponseSchema'],
+    RequestUserEnriched,
+    any,
+    any
+>('/:eventId/volunteers', async (req, res) => {
     try {
         await repository.createVolunteering(req.params.eventId, req.body.userId);
-        return res.status(202).send('volunteer added to event');
+        return res.status(201).send(successJson('volunteer added to event'));
     } catch (err) {
         if (err instanceof SqliteError) {
             if (err.code === 'SQLITE_CONSTRAINT_PRIMARYKEY') {
                 console.warn('POST:/auth/events/:eventId/volunteers - volunteer already assigned to event');
-                return res.status(202).send('volunteer added to event');
+                return res.status(201).send(successJson('volunteer added to event'));
             } else {
                 // TODO: better error handling
                 console.error('trying to ', err);
-                return res.status(500).send('something went wrong');
+                return res.status(500).send(successJson('something went wrong'));
             }
         }
         console.error('unknown error while accessing database', err);
@@ -88,9 +113,16 @@ router.post('/:eventId/volunteers', async (req, res) => {
     }
 });
 
-router.delete('/:eventId/volunteers/:volunteerId', async (req, res) => {
+router.delete<
+    '/:eventId/volunteers',
+    any,
+    components['schemas']['DefaultSuccessResponseSchema'] | components['schemas']['DefaultErrorResponseSchema'],
+    RequestUserEnriched,
+    any,
+    any
+>('/:eventId/volunteers', async (req, res) => {
     // if user already assigned, unvolunteering not permitted
-    const isAssigned = await repository.isAssigned(req.params.eventId, req.params.volunteerId);
+    const isAssigned = await repository.isAssigned(req.params.eventId, req.body.userId);
     if (isAssigned) {
         return res.status(400).send(errorJson('user is already assigned to a job within this event'));
     }
