# express-api/src/main/api/routes/teams.ts
@@ -1,28 +1,37 @@
 import express, { type Request, type Response } from 'express';
 import { SqliteError } from 'better-sqlite3';
 
-import { repository } from '../repositories/repository.js';
+import { repository } from '../../repositories/repository-factory.js';
 import eventsRoute from './events_admin.js';
-import type { Team } from '../domain/models/Team.js';
-import { errorJson, successJson } from './api-utils.js';
+import type { TeamCreator } from '../../domain/models/Team.js';
+import { errorJson, successJson, type RequestUserEnriched } from './api-utils.js';
+import type { components } from '../../../../api-spec/generated/schema.js';
 
 const router = express.Router();
 
-router.post('/', async (req, res) => {
+router.post<
+    '/',
+    any,
+    components['schemas']['DefaultSuccessResponseSchema'] | components['schemas']['DefaultErrorResponseSchema'],
+    components['schemas']['TeamCreateRequestSchema'] & RequestUserEnriched,
+    any,
+    any
+>('/', async (req, res) => {
     if (!req.body.teamName || !req.body.userId) {
         // TODO
         throw new Error('missing teamname and or user id');
     }
-    const teamNameSan = req.body.teamName.trim();
-    const team: Team = {
-        id: null,
-        name: teamNameSan,
-        adminId: req.body.userId
-    }
 
     try {
-        const newTeamId = await repository.createTeam(team);
 
+        const teamNameSan = req.body.teamName.trim();
+        const team: TeamCreator = {
+            name: teamNameSan,
+            adminId: req.body.userId
+        }
+        const newTeamId = await repository.createTeam(team);
+        // TODO return new Item
+        /*
         const newTeam = {
             id: newTeamId,
             name: teamNameSan,
@@ -30,7 +39,8 @@ router.post('/', async (req, res) => {
             subscriberIds: [],
             eventIds: {}
         };
-        return res.status(202).json(newTeam);
+        return res.status(201).json(newTeam);*/
+        return res.status(201).json(successJson('team created'));
     } catch (error) {
         if (error instanceof SqliteError) {
             // TODO extrapolate for other cases as well
@@ -41,7 +51,7 @@ router.post('/', async (req, res) => {
                     return res.status(400).send(errorJson('name cannot be blank'));
                 case 'SQLITE_CONSTRAINT_UNIQUE':
                     if (error.message.includes('name')) {
-                        console.warn('User creation failed: teamName [' + teamNameSan + '] already in use');
+                        console.warn('User creation failed: teamName [' + req.body.teamName + '] already in use');
                     }
                     // TODO return JSON
                     return res.status(400).send(errorJson('name already in use. Please use different value'));
@@ -60,7 +70,14 @@ router.post('/', async (req, res) => {
 /* --------------------- */
 
 // TODO: pagination, filter, ...
-router.get('/', async (req, res) => {
+router.get<
+    '/',
+    any,
+    components['schemas']['TeamEnrichedSchema'][] | components['schemas']['DefaultErrorResponseSchema'],
+    RequestUserEnriched,
+    any,
+    any
+>('/', async (req, res) => {
     const userId = req.body.userId;
     if (userId && typeof userId === 'string') {
         const teams = await repository.getTeamsBySubscriberId(userId);
@@ -83,18 +100,26 @@ router.use('/:teamId', async (req, _res, next) => {
 });
 
 // subscribe current user to team
-router.post('/:teamId/subscribers', async (req, res) => {
+router.post<
+    '/:teamId/subscribers',
+    any,
+    components['schemas']['DefaultSuccessResponseSchema'] | components['schemas']['DefaultErrorResponseSchema'],
+    RequestUserEnriched,
+    any,
+    any
+>('/:teamId/subscribers', async (req, res) => {
     const resultJson = {
         team_id: req.params.teamId,
         user_id: req.body.userId
     };
     try {
         await repository.createSubscription(req.body.userId, req.params.teamId);
-        return res.status(200).json(resultJson);
+        // return res.status(200).json(resultJson);
+        return res.status(200).json(successJson('subscribed successfully'));
     } catch (err) {
         if (err instanceof SqliteError && err.code === 'SQLITE_CONSTRAINT_PRIMARYKEY') {
             console.warn('user already subscribed to team');
-            return res.status(200).json(resultJson);
+            return res.status(200).json(successJson('subscribed successfully'));
         } else {
             return res.status(500).json(errorJson('whoopsie'));
         }
@@ -102,14 +127,21 @@ router.post('/:teamId/subscribers', async (req, res) => {
 });
 
 // unsubscribe current user from team
-router.delete('/:teamId/subscribers', async (req, res) => {
+router.delete<
+    '/:teamId/subscribers',
+    any,
+    components['schemas']['DefaultSuccessResponseSchema'] | components['schemas']['DefaultErrorResponseSchema'],
+    RequestUserEnriched,
+    any,
+    any
+>('/:teamId/subscribers', async (req, res) => {
     try {
         await repository.deleteSubscription(req.params.teamId, req.body.userId);
         const resultJson = {
             team_id: req.params.teamId,
             user_id: req.body.userId
         }
-        return res.status(200).json(resultJson);
+        return res.status(200).json(successJson('unsubscribed successfully'));
     } catch (err) {
         return res.status(500).json(errorJson('whoopsie'));
     }
@@ -132,7 +164,14 @@ const checkIfAdmin = (req: Request, res: Response, next: () => void) => {
 // TODO: check efficiency of double getTeamById call
 router.use('/:teamId', checkIfAdmin);
 
-router.delete('/:teamId', async (req, res) => {
+router.delete<
+    '/:teamId',
+    any,
+    components['schemas']['DefaultSuccessResponseSchema'] | components['schemas']['DefaultErrorResponseSchema'],
+    RequestUserEnriched,
+    any,
+    any
+>('/:teamId', async (req, res) => {
     await repository.deleteTeam(req.params.teamId);
     res.status(200).send(successJson('team deleted'));
 });
